--- a/src/app/user-associate/user-associate.component.html
+++ b/src/app/user-associate/user-associate.component.html
@@ -105,6 +105,14 @@
         <input id="description" type="number" formControlName="overtimeWeekend" matInput required="overtimeWeekend">
       </mat-form-field>
     </div>
+
+    <div>
+      <label for="description">Paid Holiday Leave </label>
+      <mat-form-field>
+        <mat-label>Paid Holiday</mat-label>
+        <input id="description" type="number" formControlName="paidHoliday" matInput required="paidHoliday">
+      </mat-form-field>
+    </div>
       <!-- <div>
         <label for="description">Hourly Wage: </label>
         <mat-form-field>
@@ -143,13 +151,7 @@
         </mat-form-field>
       </div>
   
-      <div>
-        <label for="description">Level OfInsurance: </label>
-        <mat-form-field>
-          <mat-label>Level OfInsurance</mat-label>
-          <input id="description" type="text" formControlName="levelOfInsurance" matInput required="levelOfInsurance">
-        </mat-form-field>
-      </div> -->
+       -->
       
       
   
