--- a/src/app/user-associate/user-associate.component.html
+++ b/src/app/user-associate/user-associate.component.html
@@ -113,6 +113,13 @@
         <input id="description" type="number" formControlName="paidHoliday" matInput required="paidHoliday">
       </mat-form-field>
     </div>
+    <div>
+      <label for="description">Exchange Rate </label>
+      <mat-form-field>
+        <mat-label>Exchange Rate</mat-label>
+        <input id="description" type="number" formControlName="exchangeRate" matInput required="exchangeRate">
+      </mat-form-field>
+    </div>
       <!-- <div>
         <label for="description">Hourly Wage: </label>
         <mat-form-field>
