calculate bonus new method

--- a/src/app/user-associate/user-associate.component.html
+++ b/src/app/user-associate/user-associate.component.html
@@ -10,7 +10,7 @@
         </mat-form-field>
       </div>
   
-      <div >
+      <!-- <div >
         <label for="description">Email: </label>
         <mat-form-field >
           <mat-label>Email</mat-label>
@@ -28,7 +28,7 @@
             </mat-select>
         </mat-form-field>
   
-      </div>
+      </div> -->
   
       <div>
         <label for="description">MonthYear: </label>
